# azens

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/agents/: .env.example
backend/agents/cv_screener/: README.md
backend/agents/knowledge_drill/: README.md
backend/migrations/: env.py
backend/migrations/versions/: 3de37d4e09d0_added_email_verification_and_password_.py  401e3d1acb14_added_questions_asked_to_sessions.py  676b2103145e_add_waitlist_table.py  7c96e60fcc7c_subscription_table_added.py  91c8248d326a_initial_schema.py  a1e7c4d90b12_stripe_webhook_idempotency.py  a5d56ddccbf5_create_cvs_table.py  a7b3d9f2c4e1_session_period_counter.py  aed33fe7b736_unsubscribe_token.py  b3f2c1d87e4a_add_verification_token_expiry.py  c4d5e6f7a8b9_add_session_feedback_status.py  e0744c9da409_create_users_table.py  e5f6a7b8c9d0_add_cv_parsing_status.py  f1a2b3c4d5e6_session_cascade_delete.py  ffa8853a89ba_initial_schema.py
backend/pipecat/server/: .env.example  bot.py
backend/src/: main.py
backend/src/api/: admin.py  auth.py  billing.py  cv.py  cvs.py  deps.py  feedback.py  sessions.py  transcripts.py  waitlist.py
backend/src/core/: config.py  database.py  logging.py  rate_limit.py  security.py
backend/src/models/: cv.py  enums.py  feedback.py  processed_stripe_event.py  question.py  session.py  subscription.py  transcript.py  user.py  waitlist.py
backend/src/prompts/: cv_screener.py  feedback.py  knowledge_drill.py
backend/src/schemas/: admin.py  auth.py  billing.py  cv.py  feedback.py  feedback_llm.py  session.py  transcript.py  (+1 more)
(+106 files in other folders)
